--- a/css/style.css
+++ b/css/style.css
@@ -79,5 +79,13 @@ button:active {
 
 #result {
   margin-top: 30px;
-  font-size: 1.5rem;
+  font-size: 2rem;
+}
+
+
+
+@media (max-height: 400px) {
+  body {
+    height: 600px;
+  }
 }
